Updated info for AOL meetup

--- a/_posts/meetups/2015-03-27-aol.md
+++ b/_posts/meetups/2015-03-27-aol.md
@@ -16,11 +16,13 @@ We are proud to announce that this will be the first Nova HS Hacker meetup!
 
 ## Things you should know
 - Food will be provided
-- There will be plenty of swag to go around :)
+- There will be plenty of giveaways to go around :)
 - We will have a great time!
 
 ## What we will do
 - Write code
+- Have fun
+- Build amazing things
 - Share projects
 - Create cool stuff
 - Compete for giveaways
