Hopefully the page will build...

--- a/_posts/meetups/2015-03-27-aol.md
+++ b/_posts/meetups/2015-03-27-aol.md
@@ -4,7 +4,7 @@ meetup: meetup
 layout: meetup
 title: First meetup
 date: "Undetermined"
-permalink: "/aol/"
+permalink: "/first/"
 host: "Daniel Christopher"
 address: "Undetermined"
 link: "https://www.facebook.com/groups/1398734050435363/"
